Fixed a few things, added more features